[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/object/Collectible.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/pineapple_t.png" type="Texture" id=2]
[ext_resource path="res://assets/sound/collect.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 11 )

[node name="CollectiblePineapple" type="Area2D" groups=[
"collectible",
]]
collision_layer = 64
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -4 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 2 )

[node name="AudioCollected" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_CollectiblePineapple_body_entered"]
[connection signal="finished" from="AudioCollected" to="." method="_on_AudioCollected_finished"]
